--- a/app/src/main/res/layout/activity_customers.xml
+++ b/app/src/main/res/layout/activity_customers.xml
@@ -27,21 +27,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/raleway"
-                android:text="@string/settings"
+                android:text="@string/customers"
                 android:textColor="@color/colorPrimary"
                 android:textSize="24sp"
                 android:layout_marginStart="10dp"
                 />
 
-        </LinearLayout>
+            <View
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
 
-        <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
-            app:layout_constraintBottom_toBottomOf="parent"
-            />
+            <androidx.appcompat.widget.AppCompatImageView
+                android:layout_width="32dp"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_add"
+                android:layout_marginEnd="5dp"
+                app:tint="@color/colorPrimary" />
+
+        </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
