--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,5 +9,6 @@
     <color name="golden">#CCAC03</color>
     <color name="golden_light">#FBF1B8</color>
     <color name="white">#FFFFFF</color>
+    <color name="gray">#636262</color>
 
 </resources>
