--- a/app/src/main/res/layout/activity_add_customer.xml
+++ b/app/src/main/res/layout/activity_add_customer.xml
@@ -5,7 +5,7 @@
 
         <variable
             name="viewModel"
-            type="com.dawar.jewellerybilling.customers.CustomerViewModel" />
+            type="com.dawar.jewellerybilling.customers.addActivity.AddCustomerViewModel" />
 
     </data>
 
