--- a/app/src/main/res/layout/activity_customers.xml
+++ b/app/src/main/res/layout/activity_customers.xml
@@ -50,11 +50,52 @@
         </LinearLayout>
 
 
+
+        <LinearLayout
+            android:id="@+id/search_box"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@id/header"
+            android:background="@drawable/border_primary"
+            android:layout_margin="10dp"
+            android:paddingStart="5dp"
+            android:paddingEnd="0dp"
+            >
+
+
+            <EditText
+                android:id="@+id/all_parties_search"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:inputType="textPersonName"
+                android:maxLines="1"
+                android:hint="Search"
+                android:imeOptions="actionDone"
+                android:background="@null"
+                android:textColor="@android:color/black"
+                android:textSize="20sp"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/search_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_search"
+                android:paddingStart="10dp"
+                android:paddingEnd="10dp"
+                />
+
+        </LinearLayout>
+
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/customers_recycler"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/header"
+            app:layout_constraintTop_toBottomOf="@id/search_box"
             app:layout_constraintBottom_toBottomOf="parent"
             />
 
