--- a/app/src/main/res/layout/card_customer.xml
+++ b/app/src/main/res/layout/card_customer.xml
@@ -4,6 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     app:cardCornerRadius="5dp"
+    app:cardElevation="0dp"
+    android:layout_margin="5dp"
     android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
