--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="colorSecondaryDark">#4873A6</color>
     <color name="colorSecondary">#4FAAD3</color>
     <color name="colorAccent">#03DAC5</color>
+    <color name="colorAccent_light">#E3F4F3</color>
     <color name="golden">#CCAC03</color>
     <color name="golden_light">#FBF1B8</color>
     <color name="white">#FFFFFF</color>
