--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="golden_light">#FBF1B8</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#636262</color>
+    <color name="red_light">#FDD4D4</color>
 
 </resources>
