--- a/app/src/main/res/layout/view_item_selector.xml
+++ b/app/src/main/res/layout/view_item_selector.xml
@@ -74,6 +74,7 @@
                 android:tint="@android:color/white"
                 android:scaleX="1.3"
                 android:scaleY="1.3"
+                android:onClick="closeSelector"
                 app:layout_constraintVertical_bias="1"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
